apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
        version: v2
    spec:
      containers:
      - name: microservice-a
        image: marcelocollyer/microservice-a:v2
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-b
  template:
    metadata:
      labels:
        app: microservice-b
        version: v2
    spec:
      containers:
      - name: microservice-b
        image: marcelocollyer/microservice-b:v2
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-c
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-c
  template:
    metadata:
      labels:
        app: microservice-c
        version: v2
    spec:
      containers:
      - name: microservice-c
        image: marcelocollyer/microservice-c:v2
  ports:
  - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-b
spec:
  selector:
    app: microservice-b
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-c
spec:
  selector:
    app: microservice-c
  ports:
  - port: 8000
    targetPort: 8000
