apps/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: microservice-a
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
    spec:
      containers:
      - name: microservice-a
        image: marcelocollyer/microservice-a:v2
        ports:
        - containerPort: 3000
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 60s}
      - setWeight: 40
      - pause: {duration: 60s}
      - setWeight: 60
      - pause: {duration: 60s}
      - setWeight: 80
      - pause: {duration: 60s}
      - setWeight: 100
      canaryService: microservice-a-canary
      stableService: microservice-a-stable
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: microservice-b
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-b
  template:
    metadata:
      labels:
        app: microservice-b
    spec:
      containers:
      - name: microservice-b
        image: marcelocollyer/microservice-b:v2
        ports:
        - containerPort: 8080
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 60s}
      - setWeight: 40
      - pause: {duration: 60s}
      - setWeight: 60
      - pause: {duration: 60s}
      - setWeight: 80
      - pause: {duration: 60s}
      - setWeight: 100
      canaryService: microservice-b-canary
      stableService: microservice-b-stable     
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: microservice-c
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-c
  template:
    metadata:
      labels:
        app: microservice-c
    spec:
      containers:
      - name: microservice-c
        image: marcelocollyer/microservice-c:v2
        ports:
        - containerPort: 8000
  strategy:
    canary: 
      steps:
      - setWeight: 20
      - pause: {duration: 60s}
      - setWeight: 40
      - pause: {duration: 60s}
      - setWeight: 60
      - pause: {duration: 60s}
      - setWeight: 80
      - pause: {duration: 60s}
      - setWeight: 100
      canaryService: microservice-c-canary
      stableService: microservice-c-stable
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-a-stable
  namespace: apps
spec:
  selector:
    app: microservice-a
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-a-canary
  namespace: apps
spec:
  selector:
    app: microservice-a
  ports:
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-b-stable
  namespace: apps
spec:
  selector:
    app: microservice-b
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-b-canary
  namespace: apps
spec:
  selector:
    app: microservice-b
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-c-stable
  namespace: apps
spec:
  selector:
    app: microservice-c
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-c-canary
  namespace: apps
spec:
  selector:
    app: microservice-c
  ports:
  - port: 8000
    targetPort: 8000
