apps/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-b-routing
spec:
  hosts:
  - microservice-b
  http:
  - match:
    - sourceLabels:
        app: microservice-a
        version: v1
    route:
    - destination:
        host: microservice-b
        subset: v1
  - match:
    - sourceLabels:
        app: microservice-a
        version: v2
    route:
    - destination:
        host: microservice-b
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-c-routing
spec:
  hosts:
  - microservice-c
  http:
  - match:
    - sourceLabels:
        app: microservice-b
        version: v1
    route:
    - destination:
        host: microservice-c
        subset: v1
  - match:
    - sourceLabels:
        app: microservice-b
        version: v2
    route:
    - destination:
        host: microservice-c
        subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a-virtualservice
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - microservice-a-gateway
  http:
  - route:
    - destination:
        host: microservice-a
        port:
          number: 3000
